--- a/style.css
+++ b/style.css
@@ -17,3 +17,34 @@ nav{
  img {
  margin: 20px;
  }
+ body, html {
+    height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+  
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://via.placeholder.com/150");
+
+ 
+  height: 30%;
+
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+section{
+    display:inline-block;
+}
