--- a/style.css
+++ b/style.css
@@ -1,85 +1,15 @@
 body{
-  border: solid black;
-  background-color: rgb(229, 153, 213);
+    outline: solid black;
+    background-color: rgb(236, 140, 236);
 }
 
 img{
-  float: left;
-  padding: 20px;
+    padding: 20px;
 }
 
-nav{
-  padding: 20px;
-  float: right;
+li{
+    display: inline;
+    margin: 20px;
+    float: right;
 }
 
-h1{
-  outline: auto black ;
-  text-align: center;
-}
-
-hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("photographer.jpg");
-  height: 50%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: rgb(230, 21, 31);
-}
-
-#Java {
-  display: flex;
-  border-bottom: solid black;
-}
-#Pro {
-  display: flex;
-  justify-content: space-around;
-}
-#menu{
-  display: flex;
-  border-spacing: 0px;
-  border: solid black 1px;
-  height: 200px;
-  width: 200px;
-}
-#js{
-  border: solid black 1px;
-}
-#numb{
-  border: solid black 1px;
-  padding:5px;
-  height: 92px;
-    width: 100px;
-}
-#main {
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-}
-#js{
-    text-align: center;
-    height: 92px;
-    width: 100px;
-}
-#div1 {
-  display: flex;
-  justify-content: center;
-}
-#div2 {
-  display: flex;
-  justify-content: space-around;
-  border-top: black solid;
-  border-bottom: solid black;
-}
-a {
-margin-left: 200px;
-}
